src/objects/Agency_wide_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Actions_Taken_to_Address_Going_Concern__c</fullName>
        <inlineHelpText>What actions are being taken to address the going concern?</inlineHelpText>
        <label>Actions Taken to Address Going Concern</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assigned_Audit_Resolution_Manager_Email__c</fullName>
        <label>Assigned Audit Resolution Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Audit_Resolution_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Audit Resolution Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Applicant</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Grantee Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>State Commission Profile</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Expert Reviewers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Agency_wide_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_GO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned GO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Applicant</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Grantee Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>State Commission Profile</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>Expert Reviewers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Agency_wide_Audit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Findings_in_Major_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are there major program single audit findings?</description>
        <inlineHelpText>Are there major program single audit findings?</inlineHelpText>
        <label>Audit Findings in Major Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Name__c</fullName>
        <inlineHelpText>Record audit name as it appears on the front page of the report.</inlineHelpText>
        <label>Audit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Overview__c</fullName>
        <label>Audit Overview</label>
        <picklist>
            <picklistValues>
                <fullName>Significant Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Weakness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questioned Costs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Audit_Period_Covered_End_Date__c</fullName>
        <label>Audit Period Covered End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Period_Covered__c</fullName>
        <label>Audit Period Covered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Agency_wide_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Cognizant_Agency_for_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNCS Cognizant Agency for Audit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Management_Decision_Delay__c</fullName>
        <label>CNCS Management Decision Delay</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CNCS_Management_Decision__c</fullName>
        <label>CNCS Management Decision</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CNCS_Management_Response__c</fullName>
        <label>CNCS Management Response</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CNCS_Proposed_Management_Decision__c</fullName>
        <label>CNCS Proposed Management Decision</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed and Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <formula>Legal_Name__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Audit_Closed__c</fullName>
        <inlineHelpText>Date the audit is closed cannot be completed until all of the Corrective Actions are completed</inlineHelpText>
        <label>Date Audit Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Auditee_30_Day_Response_to_Draft__c</fullName>
        <label>Date Auditee 30 Day Response to Draft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Auditee_Notified_of_CNCS_MD__c</fullName>
        <label>Date Auditee Notified of CNCS MD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CNCS_30_Day_Response_to_Draft_OIG__c</fullName>
        <label>Date CNCS 30 Day Response to Draft OIG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CNCS_Responded_to_Draft_Report__c</fullName>
        <label>Date CNCS Responded to Draft Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_CNCS_received_notification_of_Sin__c</fullName>
        <inlineHelpText>Enter the date CNCS received notification of the Single Audit.</inlineHelpText>
        <label>Date CNCS received Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Draft_OIG_Report_Issued__c</fullName>
        <label>Date Draft OIG Report Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Draft_Report_Issued__c</fullName>
        <label>Date Draft Report Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_OIG_Report_Issued__c</fullName>
        <label>Date Final OIG Report Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Report_Issued__c</fullName>
        <label>Date Final Report Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Investigation_Report_Issued__c</fullName>
        <label>Date Investigation Report Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Management_Decision_sent_to_OIG__c</fullName>
        <label>Date Management Decision sent to OIG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Management_Response_sent_to_OIG__c</fullName>
        <label>Date Management Response sent to OIG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Management_Response_with_Action_T__c</fullName>
        <inlineHelpText>Enter the date the management response with the action taken is due to OIG.</inlineHelpText>
        <label>Date Response due to OIG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Notice_of_Final_Action_Issued__c</fullName>
        <inlineHelpText>Notice of Final Action cannot be completed until the date the Management Response was sent to the OIG and the date(s) that corrective actions were completed has been entered.</inlineHelpText>
        <label>Date Notice of Final Action Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OIG_responded_to_PMD__c</fullName>
        <inlineHelpText>PMD – Proposed Management Decision</inlineHelpText>
        <label>Date of OIG response to PMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OIG_response_to_PMD1__c</fullName>
        <formula>IF( Proposed_Management_Decision_sent_to_OIG__c = True,  Date_of_Proposed_Management_Decision__c + 30, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date OIG response to PMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OIG_response_to_PMD_due__c</fullName>
        <formula>Date_Proposed_Management_Decision_Due__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PMD – Proposed Management Decision</inlineHelpText>
        <label>Date OIG response to PMD due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OIG_should_respond_to_PMD__c</fullName>
        <label>Date OIG should respond to PMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_OIG_should_respond_to_PMD_audit__c</fullName>
        <formula>IF( Proposed_Management_Decision_sent_to_OIG__c = True,  Date_of_Proposed_Management_Decision__c + 30, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date OIG should respond to PMD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proposed_Management_Decision_Due__c</fullName>
        <label>Date Proposed Management Decision Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proposed_Management_Decision_Sent__c</fullName>
        <label>Date Proposed Management Decision Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Single_Audit_Accepted_into_FAC__c</fullName>
        <inlineHelpText>Enter the date the Single Audit Report was accepted into the Federal Audit Clearinghouse (FAC).</inlineHelpText>
        <label>Date Single Audit Accepted into FAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Proposed_Management_Decision__c</fullName>
        <label>Date of Proposed Management Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_Audit_is_Closed__c</fullName>
        <inlineHelpText>Date the audit is closed cannot be completed until the date the final action is issued is filled in.</inlineHelpText>
        <label>Date Audit Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Notification_Date__c</fullName>
        <label>Debt Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disallowed_Costs__c</fullName>
        <label>Disallowed Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_CNCS_Management_Decision__c</fullName>
        <formula>Date_Single_Audit_Accepted_into_FAC__c + 182</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for CNCS Management Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Management_Decision1__c</fullName>
        <formula>Date_Final_OIG_Report_Issued__c + 182</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for Management Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Management_Decision2__c</fullName>
        <formula>IF( Proposed_Management_Decision_sent_to_OIG__c = True,  Date_Final_Report_Issued__c + 180, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for Management Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Management_Decision__c</fullName>
        <label>Due Date for Management Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Notice_of_Final_Action_OIG1__c</fullName>
        <formula>IF((NOT(ISBLANK(Date_Final_OIG_Report_Issued__c)) ) , Date_Final_OIG_Report_Issued__c + 365 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for Notice of Final Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Notice_of_Final_Action_OIG__c</fullName>
        <formula>IF((Proposed_Management_Decision_sent_to_OIG__c = True) ,  Date_Final_Report_Issued__c + 365 , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date for Notice of Final Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Notice_of_Final_Action__c</fullName>
        <label>Due Date for Notice of Final Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Legal_Name__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entrance_Conference_Date__c</fullName>
        <label>Entrance Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Conference_Date__c</fullName>
        <label>Exit Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_Name__c</fullName>
        <label>Federal Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Agency_s_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Were Federal Agency(s) Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Review_Report_Type__c</fullName>
        <label>Financial Statement Review Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmodified Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclaimer of Opinion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GO_s_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GO’s Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <inlineHelpText>CNCS Comments</inlineHelpText>
        <label>General Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Going_Concern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Going Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grantee_Placed_on_Manual_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grantee Placed on Manual Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Documentation_Available__c</fullName>
        <label>Internal Documentation Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agency_wide_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Major_Program_Review_Report_Type__c</fullName>
        <label>Major Program Review Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmodified Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclaimer of Opinion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Decision_Delay__c</fullName>
        <label>Management Decision Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Hold_Date__c</fullName>
        <label>Manual Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mark_as_final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark as final?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Non_Compliance_Issues__c</fullName>
        <label>Material Non-Compliance Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Significant Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Weakness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questioned Costs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_D_b_a__c</fullName>
        <formula>Legal_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name (D.b.a)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_About_the_Going_Concern__c</fullName>
        <inlineHelpText>Enter notes about the going concern including causes and possible effects.</inlineHelpText>
        <label>Notes About the Going Concern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_days_OIG_Response_Overdue1__c</fullName>
        <formula>Text(IF(ISBLANK(Date_OIG_responded_to_PMD__c), IF(Today() - Date_OIG_should_respond_to_PMD_audit__c &lt; 0,0,Today() - Date_OIG_should_respond_to_PMD_audit__c), IF(Date_OIG_responded_to_PMD__c - Date_OIG_should_respond_to_PMD_audit__c  &lt; 0, 0,Date_OIG_responded_to_PMD__c - Date_OIG_should_respond_to_PMD_audit__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days OIG Response Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_days_OIG_Response_Overdue2__c</fullName>
        <description>field is for OIG Audit record type</description>
        <formula>Text(IF(ISBLANK(Date_OIG_responded_to_PMD__c), IF(Today() - Date_OIG_response_to_PMD_due__c &lt; 0,0,Today() - Date_OIG_response_to_PMD_due__c), IF(Date_OIG_responded_to_PMD__c - Date_OIG_response_to_PMD_due__c&lt; 0, 0,Date_OIG_responded_to_PMD__c - Date_OIG_response_to_PMD_due__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days OIG Response Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIG_Concurrence_Comments__c</fullName>
        <label>OIG Concurrence Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OIG_Concurrence__c</fullName>
        <label>OIG Concurrence</label>
        <picklist>
            <picklistValues>
                <fullName>OIG Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OIG Partially Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OIG Does Not Concur</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OIG_Entrance_Conference_Date__c</fullName>
        <label>OIG Entrance Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OIG_Exit_Conference_Date__c</fullName>
        <label>OIG Exit Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OIG_Investigation_Report_Name__c</fullName>
        <label>OIG Investigation Report Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OIG_Investigation_Report_Number__c</fullName>
        <label>OIG Investigation Report Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIG_Report_Name__c</fullName>
        <label>OIG Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OIG_Report_Number__c</fullName>
        <label>OIG Report Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue1__c</fullName>
        <formula>if( RecordType.Name == &apos;Agency-wide Audit&apos; &amp;&amp; TODAY() &gt;  Due_Date_for_Notice_of_Final_Action_OIG__c ,&apos;YES&apos; ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_OIG2__c</fullName>
        <formula>IF(TODAY()-  Due_Date_for_Notice_of_Final_Action_OIG__c = 365 ,&apos;YES&apos; ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_OIG_Audit__c</fullName>
        <formula>if(TODAY() - Due_Date_for_Management_Decision__c = 182 ,&apos;YES&apos; ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF(TODAY()&gt;  Due_Date_for_CNCS_Management_Decision__c ,&apos;YES&apos; ,NULL )</formula>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_Corrective_Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prior Audit Finding Corrective Action Complete?</inlineHelpText>
        <label>PAR Corrective Action Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_s_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO’s Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Audit_Finding_Comments__c</fullName>
        <label>Prior Audit Finding Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prior_Audit_Finding_PAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior Audit Finding (PAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Management_Decision_sent_to_OIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Management Decision sent to OIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Delay_in_Final_Action__c</fullName>
        <label>Reason for Delay in Final Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Number__c</fullName>
        <label>Report Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Audit_Name__c</fullName>
        <inlineHelpText>Enter Audit Name (i.e.: Fiscal Year Ending Date Single Audit Name of Grantee)</inlineHelpText>
        <label>Single Audit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Disallowed_Costs__c</fullName>
        <label>Total Disallowed Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_s_of_Findings_in_Major_Programs__c</fullName>
        <label>Type(s) of Findings in Major Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Significant Deficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Weakness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questioned Costs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Who_was_Contacted_at_the_Organization__c</fullName>
        <label>Who was Contacted at the Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Current_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Audit ID-{000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit</pluralLabel>
    <recordTypes>
        <fullName>Agency_wide_Audit</fullName>
        <active>true</active>
        <label>Agency-wide Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>OIG_Audit</fullName>
        <active>true</active>
        <label>OIG Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>OIG_Investigation</fullName>
        <active>true</active>
        <label>OIG Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single_Audit</fullName>
        <active>true</active>
        <label>Single Audit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actions_Taken_to_Address_Going_Concern</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Going_Concern__c = False , LEN(Actions_Taken_to_Address_Going_Concern__c) &lt;&gt; 0 ,  RecordType.Name = &apos;Single Audit&apos; )</errorConditionFormula>
        <errorDisplayField>Actions_Taken_to_Address_Going_Concern__c</errorDisplayField>
        <errorMessage>Actions Taken to Address Going Concern” can only be entered if the “Going Concerns” checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CNCS_Management_Decision_validation</fullName>
        <active>true</active>
        <description>If &apos;Mark as final?&apos; is unchecked the CNCS Management decision field should be available</description>
        <errorConditionFormula>AND
(LEN(CNCS_Management_Decision__c) &lt;&gt;0,
Mark_as_final__c = TRUE ,RecordType.Name = &apos;Agency-wide Audit&apos;
)</errorConditionFormula>
        <errorDisplayField>CNCS_Management_Decision__c</errorDisplayField>
        <errorMessage>CNCS Management Decision cannot be entered if &quot;Mark as Final?&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Audit_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( PAR_Corrective_Action_Complete__c = False, NOT((ISNULL( Date_Audit_Closed__c ))), RecordType.Name=&quot;Single Audit&quot;)</errorConditionFormula>
        <errorDisplayField>Date_the_Audit_is_Closed__c</errorDisplayField>
        <errorMessage>Date Audit Closed cannot be entered if Corrective Action Complete is null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Auditee_30_Day_Response_to_Draft</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Auditee_30_Day_Response_to_Draft__c &lt;=  Date_Draft_OIG_Report_Issued__c</errorConditionFormula>
        <errorDisplayField>Date_Auditee_30_Day_Response_to_Draft__c</errorDisplayField>
        <errorMessage>The Date Auditee 30 Day Response to Draft OIG Report Issued must be greater than Date Draft Report Issued.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_CNCS_30_Day_Response_to_Draft_OIG</fullName>
        <active>true</active>
        <errorConditionFormula>Date_CNCS_30_Day_Response_to_Draft_OIG__c   &lt;=  Date_Draft_Report_Issued__c</errorConditionFormula>
        <errorDisplayField>Date_CNCS_30_Day_Response_to_Draft_OIG__c</errorDisplayField>
        <errorMessage>The Date CNCS 30 Day Response to Draft OIG Report Issued must be greater than Date Draft Report Issued.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_CNCS_Responded_to_Draft_validation</fullName>
        <active>true</active>
        <description>The Date CNCS Responded to Draft Report must be greater than or equal to the Date Draft Report Issued.</description>
        <errorConditionFormula>AND( Date_CNCS_Responded_to_Draft_Report__c &lt;  Date_Draft_Report_Issued__c )</errorConditionFormula>
        <errorDisplayField>Date_CNCS_Responded_to_Draft_Report__c</errorDisplayField>
        <errorMessage>The Date CNCS Responded to Draft Report must be greater than or equal to the Date Draft Report Issued.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Draft_OIG_Report_Issued</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Draft_OIG_Report_Issued__c  &lt;  OIG_Exit_Conference_Date__c</errorConditionFormula>
        <errorDisplayField>Date_Draft_OIG_Report_Issued__c</errorDisplayField>
        <errorMessage>The Date Draft OIG Report Issued must be greater than or equal to the OIG Exit Conference Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Draft_Report_validation</fullName>
        <active>true</active>
        <description>The Date Draft Report Issued must be greater than or equal to the Exit Conference Date.</description>
        <errorConditionFormula>AND( Date_Draft_Report_Issued__c &lt; Exit_Conference_Date__c )</errorConditionFormula>
        <errorDisplayField>Date_Draft_Report_Issued__c</errorDisplayField>
        <errorMessage>The Date Draft Report Issued must be greater than or equal to the Exit Conference Date.</errorMessage>
    </validationRules>
</CustomObject>